# akebi

./: .gitignore  CHANGELOG.md  README.md  prek.toml  pyproject.toml
.github/workflows/: release.yml
akebi/: __init__.py  bun.py  utils.py
vhs/tapes/: demo.tape
